# open-nexus-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/nexus-api/: Cargo.toml
crates/nexus-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs  storage.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: input.rs  main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: config.rs  domain.rs  error.rs  feature.rs  lib.rs  model.rs
crates/nexus-data/: Cargo.toml
crates/nexus-data/src/: artifacts.rs  frame.rs  genie.rs  lib.rs  signatures_io.rs
crates/nexus-desktop/: Cargo.toml  tauri.conf.json
crates/nexus-desktop/capabilities/: default.json
crates/nexus-desktop/src/: lib.rs  main.rs
crates/nexus-desktop/tests/: commands.rs
crates/nexus-desktop/ui/: index.html  main.js  styles.css
crates/nexus-genomics/: Cargo.toml
crates/nexus-genomics/src/: fasta.rs  lib.rs  pipeline.rs  sbs96.rs  signatures.rs
crates/nexus-ml/: Cargo.toml
crates/nexus-ml/src/: cv.rs  filter.rs  lib.rs  metrics.rs  predictor.rs  tree.rs
crates/nexus-shap/: Cargo.toml
crates/nexus-shap/src/: explainer.rs  lib.rs  treeshap.rs
crates/nexus-shap/tests/: e2e.rs
crates/nexus-testkit/: Cargo.toml
crates/nexus-testkit/src/: lib.rs
crates/nexus-viz/: Cargo.toml
crates/nexus-viz/src/: lib.rs
docs/: DATA.md  TEAMS.md
docs/contracts/: genomics.md  ml-shap.md
examples/: age_stats.json  genome.fa  manifest.json  metadata.json  model.json  patients.json
tools/pickle-migrate/: migrate.py
tools/snapshot-export/: export_snapshots.py
