[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Open Nexus command-line interface: process-features, train, predict, explain"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core.workspace = true
nexus-data.workspace = true
nexus-genomics.workspace = true
nexus-ml.workspace = true
nexus-shap.workspace = true
nexus-viz.workspace = true
polars.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
