[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain types, feature taxonomy and contracts for Open Nexus"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ndarray = { workspace = true, features = ["serde"] }
