[package]
name = "nexus-genomics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Genomic feature engineering for Open Nexus: SBS96 trinucleotide context, mutation-signature projection, GENIE/DFCI feature assembly"

[dependencies]
nexus-core.workspace = true
ndarray.workspace = true
serde.workspace = true
thiserror.workspace = true
