[package]
name = "nexus-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Polars snapshot diffing and property-test helpers for Open Nexus CI (no Python)"

[dependencies]
nexus-core.workspace = true
nexus-data.workspace = true

[dev-dependencies]
tempfile = "3"
ndarray.workspace = true
